SP-890, SP-757 (PDI-10968, PDI-10875, PDI-10896): Fixes for several timestamp issues in step Calculator, Rowgenerator, Constant